--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -1,9 +1,16 @@
 <p id="notice"><%= notice %></p>
 
-<p>
+
+<div class="row">
+	<div class="col-md-9">
+		<%= image_tag(@idea.picture_url, width: '100%') if @idea.picture.present? %>
+	</div>
+
+	<div class="col-md-3">
+	<p>
   <strong>Name:</strong>
   <%= @idea.name %>
-</p>
+</p>		
 
 <p>
   <strong>Description:</strong>
@@ -11,9 +18,9 @@
 </p>
 
 <p>
-  <strong>Picture:</strong>
-  <%= image_tag(@idea.picture_url, :width => 600) if @idea.picture.present? %>
+	<%= link_to 'Edit', edit_idea_path(@idea) %> |
+	<%= link_to 'Destroy', @idea, data: { confirm: 'Are you sure?' }, method: :delete %> |
+	<%= link_to 'Back', ideas_path %>
 </p>
-
-<%= link_to 'Edit', edit_idea_path(@idea) %> |
-<%= link_to 'Back', ideas_path %>
+</div>
+</div>
